Use errors-as-values and out params. Comment TokenList functions
- Added an Error struct. It is used for creating error objects that can be used as values. This makes it easier to perform graceful handling and pass errors up the call stack using return values for proper error handling.
- Updated TokenList to use the new error-handling pattern. Functions that can result in an error return an instance of Error and use out-parameters to return regular values (e.g. token_list_init() returns ERR_ALLOC_FAILED if malloc returned NULL. Otherwise, sets the fields of the TokenList* out param and returns NO_ERR).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.31)
 project(zephyr)
 
 add_subdirectory(toolbox)
-add_executable(zephyr "zephyr.c" "tokenizer.c" "token.h" "token_list.c" "token_list.h")
+add_executable(zephyr "zephyr.c" "tokenizer.c" "token.h" "token_list.c" "token_list.h" "error.h" "error.c")
 target_link_libraries(zephyr PRIVATE toolbox)
 
 if (MSVC)
