Regroup files and include statements
Put related files into "module" folders under src (e.g. token-related
stuff lives under src/token now).

Added "src" to include dirs in CMake to save myself from writing
relative include paths.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,21 @@ cmake_minimum_required(VERSION 3.31)
 project(zephyr)
 
 add_subdirectory(toolbox)
-add_executable(zephyr "zephyr.c" "tokenizer.c" "token.h" "token_list.c" "token_list.h" "error.h" "error.c")
+
+add_executable(
+		zephyr
+		zephyr.c
+		src/tokenizer/tokenizer.c
+		src/token/token.h
+		src/token/token_list.c
+		src/token/token_list.h
+		src/error/error.h
+		src/error/error.c
+		src/tokenizer/tokenizer.h
+		src/tokenizer/tokenizer.c
+)
+
+target_include_directories(zephyr PRIVATE src)
 target_link_libraries(zephyr PRIVATE toolbox)
 
 if (MSVC)
